apps/llm-benchmarks/base/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpl
spec:
  template:
    spec:
      containers:
      - image: frontend-image
        name: llm-benchmarks-frontend
        ports:
          - containerPort: 80
            name: http
        resources:
          requests:
            cpu: 10m
            memory: 10Mi
          limits:
            cpu: 20m
            memory: 20Mi
        livenessProbe:
          httpGet:
            path: /?liveness
            port: http
        readinessProbe:
          httpGet:
            path: /?readiness
            port: http
