apps/llm-benchmarks/base/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  ports:
  - port: 80
    targetPort: http
